fixed blue calendar text aligning

--- a/javascript/calendar/css/blue_calendar.css
+++ b/javascript/calendar/css/blue_calendar.css
@@ -54,7 +54,8 @@ body {
 .day {
   display: inline-block;
   width: 14%;
-  padding-top: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   text-align: center;
   font-weight: bold; }
 
