--- a/javascript/calendar/css/blue_calendar_date_range_picker.scss
+++ b/javascript/calendar/css/blue_calendar_date_range_picker.scss
@@ -67,7 +67,8 @@ body{
   display: inline-block;
   width: 13%;
   margin: 0.5%;
-  padding-top: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   text-align: center;
   font-weight: bold;
 }
